registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: registry
