registry/registry-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: registry
  labels:
    app: registry-ui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: registry-ui
