registry/ingress-registry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: registry-ip
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - registry.multishoping.eu
    secretName: registry-tls
  rules:
  - host: registry.multishoping.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: registry-ui
            port:
              number: 80
